@@ -9422,4 +9422,6 @@ No match
 
 /(\2)(\1)/
 
+"Z*(|d*){216}"
+
 /-- End of testinput1 --/
