@@ -110,6 +110,11 @@ Version 8.37 xx-xxx-2015
     when this assertion was used as a condition, for example (?(?!)a|b). In
     pcre2_match() it worked by luck; in pcre2_dfa_match() it gave an incorrect
     error about an unsupported item.
+    
+29. For some types of pattern, for example /Z*(|d*){216}/, the auto-
+    possessification code could take exponential time to complete. A recursion 
+    depth limit of 1000 has been imposed to limit the resources used by this 
+    optimization.
 
 
 Version 8.36 26-September-2014
